# cross-persona-introspection

./: .gitignore  README.md  local_requirements.txt  pyproject.toml  remote_requirements.txt  requirements.txt  run.py  run_experiment.py  test_smoke.py
analysis/: _patchscope_slice.html  analysis.ipynb  analyze_confidence_depth.ipynb  analyze_logit_lens.ipynb  analyze_opposing_personas_probes_and_LL dolphin 24b.ipynb  analyze_opposing_personas_probes_and_LL llama 8b copy.ipynb  analyze_opposing_personas_probes_and_LL llama 8b.ipynb  analyze_opposing_personas_probes_and_LL.ipynb  analyze_patchscope.ipynb  analyze_patchscope_full_question_logit_mode.ipynb  analyze_patchscope_open_answer.ipynb  confidence_entropy_analysis.py  distribution_shift_controls.ipynb  probe_transfer_between_personas.ipynb  summarize.py
config/: experiments.yaml  models.yaml  patchscope.yaml  patchscope_bezos.yaml  patchscope_test.yaml  personas.yaml  prompts.yaml  scoring.yaml
core/: activation_capture.py  activation_store.py  base_experiment.py  dataset_builder.py  persona_inducer.py  randomize_politics_options.py  response_parser.py  results_logger.py  run_utils.py  schemas.py  self_recognition.py  task_loader.py  train_probes.py
cross_persona_introspection/: __init__.py  schemas.py
scripts/: train_probes.py
tasks/: art_tasks_template.json  borderline_tasks.json  confidence_entropy_tasks.json  factual_tasks.json  opinion_tasks.json  opposing_personas_politics.json  patchscope_bezos_test.json  self_recognition_by_persona_category_tasks.json  self_recognition_misaligned_tasks.json  (+3 more)
(+164 files in other folders)
