[project]
name = "cross-persona-introspection"
version = "0.1.0"
description = "Framework for testing persona-dependent introspection in LLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.36",
    "accelerate>=0.25",
    "datasets>=2.14",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "tqdm>=4.60",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ipykernel"]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
